resized logo and fixed flickering bugs

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,21 +1,21 @@
 .intro {
   background-image: linear-gradient(135deg,
-    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.2) 54%,
+    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.3) 54%,
     rgba(51,128,94,0.3) 65%, rgba(51,128,94,0.7) 100%),
     url(../../img/banner-background.jpeg);
 
   background-image: -moz-linear-gradient(-45deg,
-    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.2) 54%,
+    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.3) 54%,
     rgba(51,128,94,0.3) 65%, rgba(51,128,94,0.7) 100%),
     url(../../img/banner-background.jpeg);
 
   background-image: -webkit-linear-gradient(-45deg,
-    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.2) 54%,
+    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.3) 54%,
     rgba(51,128,94,0.3) 65%, rgba(51,128,94,0.7) 100%),
     url(../../img/banner-background.jpeg);
 
   background-image: -o-linear-gradient(-45deg,
-    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.2) 54%,
+    rgba(7,160,187,0.8) 0%, rgba(44,133,110,0.3) 54%,
     rgba(51,128,94,0.3) 65%, rgba(51,128,94,0.7) 100%),
     url(../../img/banner-background.jpeg);
 
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  opacity: 0.8;
+  opacity: 0.9;
   padding: 5px 10px;
   transition: color 0.5s, opacity 0.3s
 }
